--- a/rapport2.tex
+++ b/rapport2.tex
@@ -19,7 +19,7 @@
 \newcommand{\reportsubject}{Stage de Licence 3 informatique} % Sujet
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 \setlength{\parskip}{1ex} % Espace entre les paragraphes
-\renewcommand{\baselinestretch}{1.5}
+%\renewcommand{\baselinestretch}{1.5}
 
 \newcommand{\adn}{\textsc{adn\xspace}}
 \newcommand{\bwt}{\textsc{bwt\xspace}}
