--- a/intro.tex
+++ b/intro.tex
@@ -1,4 +1,5 @@
 \section*{Introduction} % Pas de numérotation
+\addcontentsline{toc}{section}{Introduction} % Ajout dans la table des matières
 
 Le séquençage de l'ADN est depuis plus de 20 ans un sujet important de la bio-informatique, avec de applications aussi bien en biologie fondamentale qu'en médecine. Qu'il serve à étudier l'évolution ou des maladies, la demande est de plus en plus importante.
 
