--- a/contexte.tex
+++ b/contexte.tex
@@ -22,7 +22,7 @@ La méthode de Sanger consiste à répliquer un brin d'ADN dans un milieu où se
 \begin{figure}[!ht]
     \center
     \includegraphics[]{./images/chromato_acanthoweb.jpg}
-    \caption{Exemple de chromatographie}
+    \caption{Exemple de chromatographie | source : aconthoweb...}
     \label{chromato}
 \end{figure}
 
@@ -103,7 +103,7 @@ Un tableau de suffixes est un tableau d'entiers représentant tous les suffixes 
 \subsubsection{wavelet tree}
 Les arbres sont des structures de données couramment utilisés en informatique, représentant des graphes acycliques orientés, tels que tous les nœuds sauf un, la racine, ont un unique parent. Pour les arbres binaires, comme le wavelet tree, les nœuds ont au plus deux fils. Les nœuds n'ayant pas de fils sont appelés feuilles.
 
-Le \textit{wavelet tree}, ou arbre d'ondelettes, est une structure de données succincte (c'est-à-dire compressée presque optimalement), à l'origine utilisée pour représenter les tableaux de suffixes compressés, permettant de stocker des chaînes de caractères.
+Le \textit{wavelet tree}, ou arbre d'ondelettes, est une structure de données succincte (c'est-à-dire stockée optimalement), à l'origine utilisée pour représenter les tableaux de suffixes compressés, permettant de stocker des chaînes de caractères.
 
 La construction du wavelet tree est basée sur la division de l'alphabet du mot d'origine en deux. Cette division peut se faire par ordre lexicographique, ou par d'autres algorithmes plus complexes tels que le codage de Huffman. Nous ne nous intéresserons ici qu'à la première façon.
 
